--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=5.4.0",
         "ryanhs/chess.php": "1.0.2",
-        "chris-moreton/tournament-utils": "1.0.1"
+        "chris-moreton/tournament-utils": "1.0.1",
+        "zelenin/elo": "dev-master"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0"
