--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": ">=7.0",
         "ryanhs/chess.php": "1.0.2",
         "chris-moreton/tournament-utils": "1.0.1",
-        "zelenin/elo": "dev-master"
+        "zelenin/elo": "dev-master",
+        "aws/aws-sdk-php": "^3.19"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0"
